<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.example.appmonedero.ui.withdrawmoney.usecase.WithdrawMoneyViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.withdrawmoney.WithdrawMoneyFragment">

        <TextView
            android:id="@+id/tvWithdrawTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_medium"
            android:text="@string/withdraw_tv_title_text"
            android:textSize="@dimen/tv_title_textsize"
            app:layout_constraintBottom_toTopOf="@+id/tilMoney"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilMoney"
            android:layout_width="@dimen/til_width"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:layout_constraintBottom_toTopOf="@+id/bDeposit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvWithdrawTitle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edMoney"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="@string/ed_number_digits"
                android:hint="@string/deposit_withdraw_ed_money_hint"
                android:inputType="number"
                android:text="@={viewmodel.money}" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/bDeposit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/withdraw_b_withdraw_text"
            android:textSize="@dimen/button_textsize"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilMoney" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>